rest for Item completed