@@ -4,18 +4,22 @@ import buem.darovykh.summerschool.model.Item;
 import org.springframework.stereotype.Repository;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
 @Repository
 public class ItemFakeRepository {
-    private List<Item> items = List.of(
-            new Item("1", "item1", "descr 1", LocalDateTime.now(), LocalDateTime.now()),
-            new Item("2", "item2", "descr 2", LocalDateTime.now(), LocalDateTime.now()),
-            new Item("3", "item3", "descr 3", LocalDateTime.now(), LocalDateTime.now()),
-            new Item("4", "item4", "descr 4", LocalDateTime.now(), LocalDateTime.now()),
-            new Item("5", "item5", "descr 5", LocalDateTime.now(), LocalDateTime.now())
-    );
+    private LocalDateTime now = LocalDateTime.now();
+    private List<Item> items = new ArrayList<>(
+            Arrays.asList(
+                    new Item("1", "item1", "descr 1", now, now),
+                    new Item("2", "item2", "descr 2", now, now),
+                    new Item("3", "item3", "descr 3", now, now),
+                    new Item("4", "item4", "descr 4", now, now),
+                    new Item("5", "item5", "descr 5", now, now)
+            ));
 
     public List<Item> findAll(){
         return this.items;
@@ -35,13 +39,14 @@ public class ItemFakeRepository {
 
     public void deleteById(String id) {
         Item item = this.findById(id);
-        int index = items.indexOf(item);
-        this.items.remove(index);
+        this.items.remove(item);
     }
 
     public Item save(Item item) {
+        LocalDateTime saveAt = LocalDateTime.now();
         item.setId(UUID.randomUUID().toString());
-        item.setCreatedAt(LocalDateTime.now());
+        item.setCreatedAt(saveAt);
+        item.setUpdatedAt(saveAt);
         this.items.add(item);
         return item;
     }
